--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -29,6 +29,9 @@
               </li>
             </ul>
           </div>
+          <a href="{% url 'reg' %}">
+            <button class="btn btn-outline-warning">Регистрация</button>
+          </a>
         </div>
     </nav>
       
@@ -36,6 +39,13 @@
     <div class="container mt-5">
       <div class="row">
         <div class="col-md-8">
+          {% if messages %}
+            {% for mess in messages%}
+              <div class="alert alert-success">{{ mess }}</div>
+
+            {% endfor %}
+
+          {% endif %}
 
           {% block content %}
           {% endblock %}
