--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -1,11 +1,47 @@
 body {
-    background: #fafafa;
+  background: #fafafa;
 }
+
 .alert-light {
-    border-color: #bfbfbf;
+  border-color: #bfbfbf;
+}
+
+.form-register {
+  padding: 20px;
+  background: #fafafa;
+  border: 1px solid silver;
+  margin-top: 20px;
+}
+
+.form-register .helptext {color: #b7b7b7}
+
+.form-register ul.errorlist {
+    color: #b1a4a4;
+    font-weight: bold;
 }
 
 footer {
-    width: 70%;
-    margin-left: 15%;
+  width: 70%;
+  margin-left: 15%;
+}
+
+button {
+  position: relative;
+  margin: 10px;
+  width: 230px;
+  height: 50px;
+  border: 1px solid silver;
+  padding: 5px;
+  border-radius: 7px;
+  padding: 10px 15px;
+  font-size: 20px;
+  background: #fafafa;
+  color: #4333d8;
+  align-items: center;
+}
+
+button:hover {
+background: #c88284;
+width: 235px;
+height: 53px;
 }
