--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -9,7 +9,7 @@ body {
 .form-register {
   padding: 20px;
   background: #fafafa;
-  border: 1px solid silver;
+  border: 1px solid rgb(182, 177, 177);
   margin-top: 20px;
 }
 
@@ -20,6 +20,17 @@ body {
     font-weight: bold;
 }
 
+.form-register.auth input {
+  display: block;
+  width: 96%;
+  margin-top: 5px;
+  border: 1px solid silver;
+  border-radius: 5px;
+  padding: 2%;
+}
+
+
+
 footer {
   width: 70%;
   margin-left: 15%;
@@ -28,20 +39,22 @@ footer {
 button {
   position: relative;
   margin: 10px;
-  width: 230px;
+  width: 220px;
   height: 50px;
   border: 1px solid silver;
   padding: 5px;
   border-radius: 7px;
   padding: 10px 15px;
   font-size: 20px;
-  background: #fafafa;
-  color: #4333d8;
+  background: #f5f3ef;
+  color: #151516;
   align-items: center;
 }
 
+
+
 button:hover {
-background: #c88284;
+background: #ebbe8c;
 width: 235px;
 height: 53px;
 }
