--- a/blog/templates/blog/news_detail.html
+++ b/blog/templates/blog/news_detail.html
@@ -8,14 +8,14 @@
 
         <div class="alert alert-light"
             <h1>{{object.title}}</h1>
-            <p>{{ object.text }}</p>
+            <p>{{ object.text|safe }}</p>
             <div class="row">
                 <div>
                     <img src="{{ object.avtor.profile.img.url}} " alt="{{ object.avtor }}" class="user_images">
                 </div >
                 <div class="mt-2">
                     <span class="text-multed">Публикация: {{object.date|date:"d F Yг, в H:i"}}</span>
-                    <p><b>Автор: </b><mark>{{ object.avtor }}</mark></p>
+                    <p><b>Автор: </b><a href="{% url 'user-news' object.avtor.avtor %}">{{ object.avtor.avtor }}</a></p>
                 </div> 
             </div>       
         </div>
