--- a/blog/templates/blog/user_news.html
+++ b/blog/templates/blog/user_news.html
@@ -6,6 +6,9 @@
 
 {% block content %}
 
+<h2>Все статьи от автора {{ view.kwargs.username }}</h2>    
+<h4>Количество: {{ page_obj.paginator.count }}</h4>
+
     {% for post in news %}
         <div class="alert alert-light"
             <h1>{{ post.title }}</h1>
@@ -16,7 +19,7 @@
                 </div >
                 <div class="mt-2">
                     <span class="text-multed">Публикация: {{post.date|date:"d F Yг, в H:i"}}</span>
-                    <p><b>Автор: </b> <a href="{% url 'user-news' post.avtor %}">{{ post.avtor }}</a></p>
+                    <p><b>Автор: </b><a href="{% url 'user-news' post.avtor %}">{{ post.avtor }}</a></p>
                 </div> 
             </div>  
            <a href="{% url 'news-detail' post.id %}" class="btn btn-outline-warning mt-3">Читать далее</a>
