бл17_лекция 3_восстановление пароля

--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -1,18 +1,15 @@
 {% extends 'blog/base.html' %}
 
 {% block title %}
-  Страница авторизации
+Восстановление пароля
 {% endblock %}
 
 {% block content %}
-<h1>Страница авторизации</h1>
+<h1>Восстановление пароля</h1>
   <form method="post" class="form-register auth">
     {% csrf_token %}
     {{ form.as_p }}
-    <button class="brn btn-outline-warning" type="submit">Войти</button>
-    <hr>
-    <p>Забыли пароль? <a href="{% url 'pass-reset' %}">Получить новый</a></p>
-
+    <button class="btn-danger" style="width: 320px" type="submit">Востановить пароль</button>
  </form>
 
 {% endblock %}
