--- a/users/templates/users/password_reset_complete.html
+++ b/users/templates/users/password_reset_complete.html
@@ -1,19 +1,12 @@
 {% extends 'blog/base.html' %}
 
 {% block title %}
-  Страница авторизации
+Восстановление пароля
 {% endblock %}
 
 {% block content %}
-<h1>Страница авторизации</h1>
-  <form method="post" class="form-register auth">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button class="brn btn-outline-warning" type="submit">Войти</button>
-    <hr>
-    <p>Забыли пароль? <a href="{% url 'pass-reset' %}">Получить новый</a></p>
-
- </form>
+<h1>Вы успешно обновили пароль</h1>
+<p>Ваш пароль заменён!</p>
 
 {% endblock %}
 
